manifests/apps/bluespice/apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluespice
  labels:
    app.kubernetes.io/part-of: bluespice
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
