manifests/apps/bluespice/apps/base/cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: bluespice
  labels:
    app.kubernetes.io/name: cache
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: cache
  ports:
    - name: memcached
      port: 11211
      targetPort: 11211
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: bluespice
  labels:
    app.kubernetes.io/name: cache
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cache
        app.kubernetes.io/part-of: bluespice
        app.kubernetes.io/component: stateless
    spec:
      containers:
        - name: cache
          image: bluespice/cache:5.2.6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
