manifests/apps/bluespice/apps/base/diagram.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagram
  namespace: bluespice
  labels:
    app.kubernetes.io/name: diagram
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: diagram
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diagram
  namespace: bluespice
  labels:
    app.kubernetes.io/name: diagram
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: diagram
  template:
    metadata:
      labels:
        app.kubernetes.io/name: diagram
        app.kubernetes.io/part-of: bluespice
        app.kubernetes.io/component: stateless
    spec:
      serviceAccountName: bluespice-anyuid
      containers:
        - name: diagram
          image: bluespice/diagram:5.2.6
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
