manifests/apps/bluespice/apps/base/formula.yaml
apiVersion: v1
kind: Service
metadata:
  name: formula
  namespace: bluespice
  labels:
    app.kubernetes.io/name: formula
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: formula
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formula
  namespace: bluespice
  labels:
    app.kubernetes.io/name: formula
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: formula
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formula
        app.kubernetes.io/part-of: bluespice
        app.kubernetes.io/component: stateless
    spec:
      containers:
        - name: formula
          image: bluespice/formula:5.2.6
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
