manifests/apps/bluespice/apps/base/pdf.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf
  namespace: bluespice
  labels:
    app.kubernetes.io/name: pdf
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: pdf
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf
  namespace: bluespice
  labels:
    app.kubernetes.io/name: pdf
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdf
        app.kubernetes.io/part-of: bluespice
        app.kubernetes.io/component: stateless
    spec:
      serviceAccountName: bluespice-anyuid
      containers:
        - name: pdf
          image: bluespice/pdf:5.2.6
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
