manifests/apps/bluespice/apps/base/wire.yaml
apiVersion: v1
kind: Service
metadata:
  name: wire
  namespace: bluespice
  labels:
    app.kubernetes.io/name: wire
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: wire
  ports:
    - name: http
      port: 3333
      targetPort: 3333
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wire
  namespace: bluespice
  labels:
    app.kubernetes.io/name: wire
    app.kubernetes.io/part-of: bluespice
    app.kubernetes.io/component: stateless
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wire
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wire
        app.kubernetes.io/part-of: bluespice
        app.kubernetes.io/component: stateless
    spec:
      serviceAccountName: bluespice-anyuid
      enableServiceLinks: false
      containers:
        - name: wire
          image: bluespice/wire:5.2.6
          ports:
            - containerPort: 3333
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
